style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
:root {
    --primary-color: #004A9D;
    --secondary-color: white;
}


body {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    margin: 0;
}

.heading {
    background-color: var(--primary-color);
    padding: 1rem;
    color: var(--secondary-color);
    margin-bottom: 1rem;
}

.container {
    display: flex;
    flex-direction: column;
    max-width: 40%;
    margin: auto;
    font-size: larger;
}

#birth-date, #lucky-number {
    border: 1px var(--primary-color) solid;
    border-radius: 0.3rem 0.3rem;
    height: 8vh;
    text-align: center;
}


label {
    margin: 0.5rem;
}

button {
    margin: 1rem auto;
    max-width: 70px;
    background: transparent;
    border: 1px var(--primary-color) solid;
    border-radius: 0.3rem 0.3rem;
    padding: 0.5rem 0.5rem;
    font-size: large;
}

#output-box {
    color: var(--primary-color);
    font-weight: bold;
}

small {
    margin: 1rem auto;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
}

@media only screen and (max-width: 900px) {
    .container {
        max-width: 90%;
    }

    #birth-date {
        width: 100%;
        background: transparent;
        margin: auto;
    }
  }

